--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,17 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              }
-            ],
+                "input": "public",
+                "output": "/assets/"
+              },
+              "src/assets",
+              "src/favicon.ico"
+            ],            
             "styles": [
               "src/styles.css"
             ],
             "scripts": [],
+            "baseHref": "/RWAT-Lab7/",
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -94,6 +98,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
